fixed hero title spacing issue on mobile

--- a/sylkemohle/src/Hero.css
+++ b/sylkemohle/src/Hero.css
@@ -116,17 +116,31 @@ transition: all 0.5s;
   display: flex;
   justify-content: center;
   align-content: baseline;
+  overflow-x: visible !important;
+
+
+}
+
+.hero-title{
+  position: absolute;
+  z-index: 2;
+  
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-self: center;
+min-height: 100vh;
+min-height: 100svh;
 
 
 }
 .tag-line{
-  position: absolute;
-  z-index: 2;
+  
   font-family: 'Hind',sans-serif;
   font-size: 5rem;
   text-align: left;
   padding: 20px;
-  align-self: center;
+  
   letter-spacing: -0.06rem;
   margin-bottom: 0px;
   font-weight: 900;
@@ -134,14 +148,14 @@ transition: all 0.5s;
 }
 
 .tag{
-  position: absolute;
+
   z-index: 2;
   font-family: 'satoshi',sans-serif;
   padding: 20px;
   padding-left: 30px;
   text-align: left;
-  top: 66%;
-  right: 59%;
+ margin-top: 0px;
+ padding-top: 0px;
   
   font-weight: 700;
   font-size: 1.35rem;
@@ -736,6 +750,8 @@ transition: opacity 1.5s ease-in ;
   .foot-contact{
     margin-left: 0px;
   }
+
+
 }
 
 .contact-us {
