--- a/sylkemohle/src/index.css
+++ b/sylkemohle/src/index.css
@@ -6,7 +6,7 @@
   color-scheme: light dark;
 
   max-width: 100svw;
-
+overflow-x: hidden;
   background-color: #242424;
 
   font-synthesis: none;
@@ -14,7 +14,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-body {
+.html {
   position: fixed;
   width: 100%;
   height: 100%;
