--- a/sylkemohle/src/servicedetail.css
+++ b/sylkemohle/src/servicedetail.css
@@ -18,6 +18,7 @@
         display: flex;
         flex-direction: column;
         box-shadow: none;
+        overflow-x: hidden !important;
        }
 
         .nav-link{
@@ -31,11 +32,11 @@
           font-size: 2rem;
         }
 
-        body {
+        html {
           overflow-x: hidden;
           max-width: 100svw;
       }
-
+      
       .nav-links, .nav-link{
         gap: 1px;
       }
